--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 <body>
 <header>
-    <h2>Задание № 2 "Рейтинг"</h2>
+    <h2 class="title">Задание № 2 "Рейтинг"</h2>
     <ul class="nav nav-tabs">
-        <li data-tab="rating" tabindex="1">
+        <li data-tab="rating" title="Задание со звездочками" tabindex="1">
             <a>Задание № 2</a>
         </li>
-        <li tabindex="1" data-tab="home">
+        <li tabindex="2" data-tab="home" title="хз">
             <a>Задание № 3</a>
         </li>
-        <li tabindex="1" data-tab="browser">
+        <li tabindex="3" data-tab="browser" title="Задание с браузерами">
             <a>Задание № 5</a>
         </li>
     </ul>
@@ -60,6 +60,10 @@
             <div class="text"><span class="blue">Internet <br> Explorer</span></div>
         </div>
     </div>
+</section>
+<section class="console">
+    <div class="output"></div>
+    <input  autofocus="" class="input">
 </section>
 </body>
 
