--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <header>
     <h2 class="title">Задание № 2 "Рейтинг"</h2>
     <ul class="nav nav-tabs">
-        <li data-tab="rating" title="Задание со звездочками" tabindex="1">
+        <li class="tabs" data-tab="rating" title="Задание со звездочками" tabindex="1">
             <a>Задание № 2</a>
         </li>
-        <li tabindex="2" data-tab="home" title="хз">
+        <li class="tabs" tabindex="2" data-tab="progress" title="Прогресс-бар">
             <a>Задание № 3</a>
         </li>
-        <li tabindex="3" data-tab="browser" title="Задание с браузерами">
+        <li class="tabs" tabindex="3" data-tab="browser" title="Задание с браузерами">
             <a>Задание № 5</a>
         </li>
     </ul>
@@ -32,7 +32,11 @@
             <input type="radio" id="star1" name="rating" value="1" /><label for="star1"></label>
         </div>
     </div>
-    <div class ="tab-content" id="home"></div>
+    <div class ="tab-content" id="progress">
+        <div class="progress-wrap">
+            <div class="progress" style="width: 20%"></div>
+        </div>
+    </div>
     <div class ="tab-content" id="browser">
         <div class="bro">
             <div class="photo"><img src="images/1browsers.png"></div>
@@ -63,7 +67,7 @@
 </section>
 <section class="console">
     <div class="output"></div>
-    <input  autofocus="" class="input">
+    <input  tabindex="-1" class="input">
 </section>
 </body>
 
