add man function to module console

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </section>
 <section class="console">
     <div class="output"></div>
-    <input  tabindex="-1" class="input">
+    <input  tabindex="-1" class="input" title="Наберите в консоли man(), чтобы посмотреть команды">
 </section>
 </body>
 
