delete function findInHistory

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
 <body>
 <header>
-    <h2 class="title">Задание № 2 "Рейтинг"</h2>
+    <h2 class="title">Задание № 1 "Рейтинг"</h2>
     <ul class="nav nav-tabs">
         <li class="tabs" data-tab="rating" title="Задание со звездочками" tabindex="1">
-            <a>Задание № 2</a>
+            <a>Задание № 1</a>
         </li>
         <li class="tabs" tabindex="2" data-tab="progress" title="Прогресс-бар">
-            <a>Задание № 3</a>
+            <a>Задание № 2</a>
         </li>
         <li class="tabs" tabindex="3" data-tab="browser" title="Задание с браузерами">
-            <a>Задание № 5</a>
+            <a>Задание № 3</a>
         </li>
     </ul>
 </header>
@@ -66,8 +66,8 @@
     </div>
 </section>
 <section class="console">
-    <div class="output"></div>
-    <input  tabindex="-1" class="input" title="Наберите в консоли man(), чтобы посмотреть команды">
+    <div class="console_output"></div>
+    <input  tabindex="-1" class="console_input" title="Наберите в консоли man(), чтобы посмотреть команды">
 </section>
 </body>
 
