refactor method custom_console

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h2 class="title">Задание № 1 "Рейтинг"</h2>
     <ul class="nav nav-tabs">
         <li class="tabs" data-tab="rating" title="Задание со звездочками" tabindex="1">
-            <a>Задание № 1</a>
+            Задание № 1
         </li>
         <li class="tabs" tabindex="2" data-tab="progress" title="Прогресс-бар">
-            <a>Задание № 2</a>
+            Задание № 2
         </li>
         <li class="tabs" tabindex="3" data-tab="browser" title="Задание с браузерами">
-            <a>Задание № 3</a>
+            Задание № 3
         </li>
     </ul>
 </header>
